# tinydns

./: .clang-format  .doxyconf  CMakeLists.txt  LICENSE  README.md
cli/: main.c
lib/: io.c  io.h  label.c  label.h  rdata.h  tiny_dns.c  tiny_dns.h
lib/rdata/: CMakeLists.txt  rr_a.c  rr_aaaa.c  rr_cname.c  rr_srv.c  rr_txt.c
tests/: CMakeLists.txt  io_reader_test.cc  io_writer_test.cc  label_normal_test.cc  label_ptr_test.cc
